Fixed bug with same edge case as last commit but for the containers for Today's Plan & Tomorrow's Plan (Correctly moves to new line on overflow)

--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,11 @@ textarea {
   display: flex;
   font-size: 2.5vh;
 
+  overflow-y: auto;
+  white-space: normal;
+  scrollbar-width: thin;
+  word-break: break-word;
+
   width: 30%;
   height: 40%;
   background-color: rgb(255, 255, 255);
@@ -378,7 +383,7 @@ textarea {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border: 0.5px solid rgba(0, 0, 0, 0.25);
-  padding-left: 20px;
+  padding: 0px 20px;
 
   position: absolute;
   top: 21%;
@@ -413,6 +418,11 @@ textarea {
   display: flex;
   font-size: 2.5vh;
 
+  overflow-y: auto;
+  white-space: normal;
+  scrollbar-width: thin;
+  word-break: break-word;
+
   width: 30%;
   height: 30%;
   background-color: rgb(255, 255, 255);
@@ -421,7 +431,7 @@ textarea {
   border-bottom-right-radius: 10px;
   box-sizing: border-box; 
   border: 0.5px solid rgba(0, 0, 0, 0.25);
-  padding-left: 20px;
+  padding: 0px 20px;
 
   position: absolute;
   top: 69%;
